# Autonomous_car-A_ROS_project

./: .gitignore
arduino_codes/: car_actuation.ino  encoder_mega.ino
build_isolated/: catkin_make_isolated.cache
build_isolated/ackermann_encoder_odometry/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build_isolated/cartographer_ros/: AllFiles.cmake  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build_isolated/cartographer_ros_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build_isolated/cartographer_rviz/: AllFiles.cmake  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build_isolated/mpu_6050_driver/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build_isolated/nav_pkg/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build_isolated/rplidar_ros/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build_isolated/sensor_msgs_ext/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  (+3 more)
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
src/: .rosinstall  .rosinstall.bak
src/ackermann_encoder_odometry/: CMakeLists.txt
src/ackermann_encoder_odometry/src/: encoder_odometry_node.cpp
(+281 files in other folders)
